handle index page complete

--- a/gochat/http/public/css/chat.css
+++ b/gochat/http/public/css/chat.css
@@ -1,73 +1,8 @@
-body {
-	display: flex;
-	height: 100vh;
-}
-
 .my-message {
 	text-align: right;
 }
 .admin-message {
 	font-style: italic;
-}
-.head {
-	display: flex;
-	height: 7%;
-	padding: 0.5em;
-	align-items: center;
-}
-
-.body {
-	display: flex;
-	height: 93%;
-	flex-direction: column;
-	padding: 1em;
-	border: 1px solid #eee;
-}
-
-.chat {
-	display: flex;
-	width: 100vw;
-}
-
-.sidebar {
-	width: 20%;
-	display: flex;
-	flex-direction: column;
-}
-
-.sidebar__header {
-	text-align: center;
-}
-
-.sidebar__title {
-	width: 100%;
-	margin: 0;
-}
-
-.sidebar li {
-	margin-bottom: 0.5em;
-	list-style: none;
-}
-.sidebar li a {
-	padding: 1em;
-	display: block;
-}
-.sidebar li a:hover {
-	background-color: #999;
-}
-
-.sidebar li .selected {
-	background: blue;
-}
-
-.chat__main {
-	width: 80%;
-	display: flex;
-	flex-direction: column;
-}
-
-.chat__header button {
-	margin-left: auto;
 }
 
 .chat__messages {
@@ -91,23 +26,25 @@ body {
 }
 .chat__form button {
 	width: 10%;
-	background: rgb(130, 224, 255);
 	border: none;
 }
-#messages {
-	margin: 0;
-	padding: 0;
+
+.chat__form button:disabled {
+	cursor: default;
 }
-.chat__messages li {
+
+.chat-messages {
+}
+.chat-messages li {
 	padding: 0 0.5em;
 	margin-bottom: 0.2em;
 	list-style-type: none;
 }
-.chat__messages li:nth-child(odd) {
+.chat-messages li:nth-child(odd) {
 	background: #eee;
 }
 
-.chat__messages li img {
+.chat-messages li img {
 	margin-right: 0.5em;
 }
 
@@ -123,12 +60,6 @@ body {
 }
 
 @media (max-width: 45em) {
-	.sidebar {
-		display: none;
-	}
-	.chat__main {
-		width: 100%;
-	}
 	.chat__form {
 		flex-direction: column;
 	}
