--- a/gochat/http/templates/pages/chat.html
+++ b/gochat/http/templates/pages/chat.html
@@ -2,8 +2,7 @@
 
 {{ define "stylesheets"}}<link rel="stylesheet" href="/public/css/chat.css" />{{end }}
 
-{{ define "content" }} 
-
+{{ define "contents" }} 
 <div class="chat">
   <div class="sidebar">
     <div class="sidebar__header head">
@@ -27,7 +26,44 @@
     </div>
   </div>
 </div>
-{{ end }} 
+{{ end }}
+
+{{ define "content" }}
+{{ if .user }}
+<div style="min-height:100vh;">
+  <div class="bg-dark text-white row col-md-12 m-0 justify-content-center align-items-center" style="height:12vh;">
+      <p class="text-right ml-auto font-weight-bold"> Hello {{.user.Name}}</p>
+      <p class="text-right ml-auto"><button class="btn btn-danger" id="leave-room">Leave room</button></p>
+  </div>
+
+
+
+
+
+
+  <div class="row col-md-12 m-0 p-0" style="height:88vh;">
+    {{ template "sidebar" }}
+    <div class="col-md-9 m-0 p-0 d-flex flex-column justify-content-between">
+      <ul id="messages" class="chat-messages m-0 p-0 pl-3"></ul>
+      <div class="chatarea__footer">
+        <form class="chat__form" id="chatbox" role="form">
+          <input type="text" id="message" />
+          <button type="submit" class="btn btn-primary" disabled>Send</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+{{ else }}
+<p> Sign up or login</p>
+{{ end }}
+
+{{ end }}
+
+
+
+
+
 
 {{ define "scripts" }}
 <script>
