--- a/gochat/http/templates/pages/signup.html
+++ b/gochat/http/templates/pages/signup.html
@@ -9,7 +9,7 @@
 	<div>
 	<div class="card">
 		<p class="card-header">
-			Enter your details to register. or 
+			Enter your details to register. or <a href="/login">login</a>
 		</p>
 		<div class="card-body">
             {{ with .error }}
