--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,8 +12,8 @@
 			<input type="text" name="lastname" class="form-control" required />
 		</div>
 		<div class="form-group">
-			<label for="nickname">Nick</label>
-			<input type="text" name="nickname" class="form-control" required />
+			<label for="username">Display name</label>
+			<input type="text" name="username" class="form-control" required />
 		</div>
 		<div class="form-group">
 			<label for="email">Email</label>
