--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -9,6 +9,7 @@
 			href="/public/stylesheets/bootstrap/bootstrap.min.css"
 			rel="stylesheet"
 		/>
+		{{ block "stylesheets" .}} {{end}}
 		{{ block "styles" .}}
 		<style>
 			input {
