--- a/templates/upload.html
+++ b/templates/upload.html
@@ -11,7 +11,7 @@
     enctype="multipart/form-data"
     method="post"
   >
-    <input type="hidden" name="userid" value="{{.UserData.userid}}" />
+    <input type="hidden" name="userid" value="{{ .user.ID }}" />
     <div class="form-group">
       <label for="avatarFile">Select file</label>
       <input type="file" name="avatarFile" />
