--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -32,6 +32,7 @@
 		    <p>This is default</p>
 		{{ end }}
 		<script src="/public/js/lib/jquery.min.js"></script>
+		<script src="/public/js/lib/moment.min.js"></script>
 		<script src="/public/js/lib/bootstrap/bootstrap.min.js"></script>
 		{{block "scripts" .}} {{ end }}
 	</body>
