--- a/gochat/http/templates/pages/signup.html
+++ b/gochat/http/templates/pages/signup.html
@@ -14,26 +14,16 @@
 		<div class="card-body">
 			<form method="POST">
 				<div class="form-group">
-					<label for="firstname">Firstname</label>
+					<label for="name">Name</label>
 					<input
 						type="text"
-						name="firstname"
-						class="form-control"
-						required
-						autofocus
-					/>
-				</div>
-				<div class="form-group">
-					<label for="lastname">Lastname</label>
-					<input
-						type="text"
-						name="lastname"
+						name="name"
 						class="form-control"
 						required
 					/>
 				</div>
 				<div class="form-group">
-					<label for="username">Display name</label>
+					<label for="username">Username</label>
 					<input
 						type="text"
 						name="username"
