--- a/gochat/http/public/css/chat.css
+++ b/gochat/http/public/css/chat.css
@@ -1,5 +1,4 @@
 body {
-	font: 1.6rem Helvetica, Arial;
 	display: flex;
 	height: 100vh;
 }
@@ -8,13 +7,12 @@ body {
 	text-align: right;
 }
 .admin-message {
-  font-size: 1rem;
-  font-style: italic;
+	font-style: italic;
 }
 .head {
 	display: flex;
 	height: 7%;
-	padding: 0.5rem;
+	padding: 0.5em;
 	align-items: center;
 }
 
@@ -22,7 +20,7 @@ body {
 	display: flex;
 	height: 93%;
 	flex-direction: column;
-	padding: 1rem;
+	padding: 1em;
 	border: 1px solid #eee;
 }
 
@@ -37,7 +35,7 @@ body {
 	flex-direction: column;
 }
 
-.sidebar__header{
+.sidebar__header {
 	text-align: center;
 }
 
@@ -47,19 +45,19 @@ body {
 }
 
 .sidebar li {
-	margin-bottom: 0.5rem;
+	margin-bottom: 0.5em;
 	list-style: none;
 }
-.sidebar  li a{
-	padding: 1rem;
+.sidebar li a {
+	padding: 1em;
 	display: block;
 }
-.sidebar li a:hover{
+.sidebar li a:hover {
 	background-color: #999;
 }
 
 .sidebar li .selected {
-    background: blue;
+	background: blue;
 }
 
 .chat__main {
@@ -69,29 +67,27 @@ body {
 }
 
 .chat__header button {
-   margin-left: auto;
+	margin-left: auto;
 }
 
-
 .chat__messages {
-   padding: 1.2rem;
-   overflow-y: scroll;
-   height: 90%;
+	padding: 1.2em;
+	overflow-y: scroll;
+	height: 90%;
 }
 
 .chat__form {
 	background: #000;
-	padding: 1.2rem;
+	padding: 0.5em;
 	width: 100%;
 	display: flex;
-
 }
 .chat__form input {
 	display: block;
-	margin-right: 0.5rem;
+	margin-right: 0.5em;
 	border: 0;
 	width: 90%;
-	padding: 1.2rem;
+	padding: 0.5em;
 }
 .chat__form button {
 	width: 10%;
@@ -103,8 +99,8 @@ body {
 	padding: 0;
 }
 .chat__messages li {
-	padding: 0.5rem 1rem;
-	margin-bottom: 0.2rem;
+	padding: 0 0.5em;
+	margin-bottom: 0.2em;
 	list-style-type: none;
 }
 .chat__messages li:nth-child(odd) {
@@ -112,25 +108,21 @@ body {
 }
 
 .chat__messages li img {
-	margin-right: 1rem;
+	margin-right: 0.5em;
 }
 
-.message {
-  padding: 1rem;
-}
 .message__title {
-  margin-bottom: 0.5rem;
+	margin-bottom: 0.5em;
 }
 
 .message__title span {
-  color: #999;
-  font-style: italic;
-  font-size: 1.4rem; 
-  padding: 0, 1.2rem;
-  margin-left: 1.2rem;
+	color: #999;
+	font-style: italic;
+	padding: 0, 0.2em;
+	margin-left: 0.2em;
 }
 
-@media (max-width: 45rem) {
+@media (max-width: 45em) {
 	.sidebar {
 		display: none;
 	}
@@ -142,7 +134,7 @@ body {
 	}
 	.chat__form button {
 		width: 100%;
-		margin-top: 0.5rem;
+		margin-top: 0.5em;
 	}
 
 	.chat__form input {
